--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,10 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+.flutter-plugins-dependencies
+buil/ios/
+.bin
+.app
+.framework
+.dill
